Filter administrative report view about a district topic.

--- a/src/main/resources/web/kiez-administration.html
+++ b/src/main/resources/web/kiez-administration.html
@@ -46,7 +46,9 @@
 
         <div id="filter-container"></div>
 
-        <div id="listing"></div>
+        <div id="listing">
+            <ul class="soziale-einrichtungen"></ul>
+        </div>
 
         <!-- Notification area -->
         <div id="notification" onclick="javascript:kiezatlas.close_message_window()">
