Adapted list styles in administration view..

--- a/src/main/resources/web/kiez-administration.html
+++ b/src/main/resources/web/kiez-administration.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="/de.kiezatlas.website/vendor/jquery/ui/css/kiezatlas/jquery-ui-1.9.2.custom.min.css"/>
         <link rel="stylesheet" href="/de.kiezatlas.website/css/sitestyle.css"/>
+        <link rel="stylesheet" href="/de.kiezatlas/style/kiezatlas.css"/>
 
         <script src="/de.kiezatlas.website/vendor/jquery/jquery-1.9.1.min.js"></script>
         <script src="/de.kiezatlas.website/vendor/jquery/ui/js/jquery-ui-1.9.2.custom.min.js"></script>
