Introduced an administrative view with basic reporting.

--- a/src/main/resources/web/kiez-administration.html
+++ b/src/main/resources/web/kiez-administration.html
@@ -28,7 +28,7 @@
 
         </script>
     </head>
-    <body class="kiezatlas">
+    <body class="kiezatlas administration">
 
         <div id="navigation">
             <ul>
@@ -42,6 +42,7 @@
             <div class="welcome">
                 <img src="/de.kiezatlas.website/images/kiezatlas2-logo.png" width="150" />
                 <h3>Hi, <span class="username"></span></h3>
+                <div class="district-links"></div>
             </div>
         </div>
 
