Extended the geomaps module and some minor changes.

--- a/src/main/resources/web/kiez-administration.html
+++ b/src/main/resources/web/kiez-administration.html
@@ -33,7 +33,7 @@
         <div id="navigation">
             <ul>
                 <li class="login"><a href="/sign-up/login">Anmelden</a></li>
-                <li class="angebote"><a href="/kiezatlas/administration/">Alle Einrichtungen</a></li>
+                <li class="angeote"><a href="/website/user/home" class="button">zurück zum Hauptmen&uuml;</a></li>
                 <li class="logout"><a href="/#logout/" onclick="javascript:restc.logout()">Abmelden</a></li>
             </ul>
         </div>
